--- a/css/main.css
+++ b/css/main.css
@@ -34,8 +34,8 @@ body {
   border-radius: .5rem;
   max-width: 15em;
   padding: 1rem;
-  bottom: 47rem;
-  left: .5rem;
+  bottom: 37rem;
+  left: 1rem;
 }
 
 .traditional {
@@ -45,6 +45,17 @@ body {
   border-radius: .5rem;
   max-width: 15em;
   padding: 1rem;
-  bottom: 33.5rem;
-  left: .5rem;
+  bottom: 37rem;
+  left: 36rem;
+}
+
+.bean {
+  position: absolute;
+  background-color: rgba(0, 0, 0, .5);
+  color: #fff;
+  border-radius: .5rem;
+  max-width: 15em;
+  padding: 1rem;
+  bottom: 37rem;
+  left: 71rem;
 }
